some text, link styling, spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
         @apply text-secondarytwo-light;
     }
     h2 {
-        @apply text-4xl py-2;
+        @apply text-4xl pb-2 pt-5;
     }
     h3 {
         @apply text-2xl py-1.5;
@@ -34,6 +34,9 @@
     p {
         @apply p-1;
     }
+    a {
+        @apply underline text-primary focus:text-complementary-verydark;
+    }
 }
 
 @layer components {
@@ -44,14 +47,16 @@
         @apply container mx-auto bg-blue-200 rounded text-gray-900 p-8 mb-8;
     }
     .content {
-        @apply md:flex;
+        @apply md:flex items-start;
     }
-    /* .primary {
-      
-    } */
+    .primary {
+        @apply pr-2;
+    }
     .box {
         @apply bg-secondarytwo-light rounded text-white mx-4 my-2 p-5;
     }
+    
+    /* flex here makes the text line up vertically instead of wrapping around the arrow */
     .point {
         @apply flex;
     }
@@ -59,5 +64,4 @@
         content: "\2192";
         @apply pr-2 text-2xl text-secondaryone-dark font-bold relative -top-1;
     }
-   
 }
